--- a/parking-system/backend/src/main/resources/application.properties
+++ b/parking-system/backend/src/main/resources/application.properties
@@ -1,27 +1,62 @@
-.# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/parking_system
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/parking_system?createDatabaseIfNotExist=true
 spring.datasource.username=root
-#This is where you put your password
-#
-#
-#
 spring.datasource.password=mlpzaq
-#
-#
-#
-#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Server Configuration
 server.port=8080
 
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.parking=INFO
+
 # CORS Configuration
 spring.web.cors.allowed-origins=http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+```
+
+**⚠️ IMPORTANT: Replace `YOUR_MYSQL_PASSWORD` with your actual MySQL root password!**
+
+# ---
+
+# ## 5️⃣ **Verify Directory Structure**
+
+# Your backend folder should look EXACTLY like this:
+# ```
+# backend/
+# ├── pom.xml
+# └── src/
+#     └── main/
+#         ├── java/
+#         │   └── com/
+#         │       └── parking/
+#         │           ├── ParkingSystemApplication.java
+#         │           ├── config/
+#         │           │   ├── DataInitializer.java
+#         │           │   └── WebConfig.java
+#         │           ├── controller/
+#         │           │   ├── BookingController.java
+#         │           │   ├── ParkingSlotController.java
+#         │           │   └── UserController.java
+#         │           ├── model/
+#         │           │   ├── Booking.java
+#         │           │   ├── ParkingSlot.java
+#         │           │   └── User.java
+#         │           ├── repository/
+#         │           │   ├── BookingRepository.java
+#         │           │   ├── ParkingSlotRepository.java
+#         │           │   └── UserRepository.java
+#         │           └── service/
+#         │               ├── BookingService.java
+#         │               ├── ParkingSlotService.java
+#         │               └── UserService.java
+#         └── resources/
+#             └── application.properties
